[package]
name = "rust-pbr"
version = "0.1.0"
authors = ["Alex <36093392+branchmispredictor@users.noreply.github.com>"]

[dependencies]
rand = "0.4"
clippy = {version = "*", optional = true}

[features]
default = []
dev = ["clippy"]

[lib]
name = "pbr"
path = "src/lib.rs"

[[bin]]
name = "rust-pbr"
path = "src/main.rs"
